--- a/app/views/uniform/password_resets/edit.html.erb
+++ b/app/views/uniform/password_resets/edit.html.erb
@@ -10,13 +10,14 @@
 
 <% semantic_form_for @user, :url => password_reset_path, :method => :put do |f| %>
   
-	<%= f.error_messages %>
-	<%= f.label :password %><br />
-	<%= f.password_field :password %><br />
-	<br />
-	<%= f.label :password_confirmation %><br />
-	<%= f.password_field :password_confirmation %><br />
+	<% f.inputs do %>
 
-	<%= f.submit "Update my password and log me in" %>
+		<%= f.input :password %>
+		<%= f.input :password_confirmation %>
+	<% end %>
+
+	<% f.buttons do %>
+		<%= f.commit_button 'Update my password and log me in' %>
+	<% end %>
 
 <% end %>
