Changed link to the control site.

--- a/app/views/uniform/users/activate.html.erb
+++ b/app/views/uniform/users/activate.html.erb
@@ -14,7 +14,7 @@
 	<p class="note">
 		You are now considered an administrator. 
 		You can now access
-		<%= link_to 'admin only', admin_path, {
+		<%= link_to 'admin only', 'http://control.compnow.com.au', {
 			:title => "Go to the admin only section of the website" 
 		} %> features of the website.
 	</p>
