Adding in account_name to the users model

--- a/app/views/uniform/users/_form.html.erb
+++ b/app/views/uniform/users/_form.html.erb
@@ -9,6 +9,9 @@
 				:hint => "We will send you a welcome email with a confirmation link to this address." %>
 
 	<%= f.input :phone_number %>
+	
+	<%= f.input :account_name,
+	 			:label => "Company name" %>
 
 	<% end %>
 
