Adjustments to logic to display the account_name

--- a/app/views/shared/inc/_logged_in_as.html.erb
+++ b/app/views/shared/inc/_logged_in_as.html.erb
@@ -8,4 +8,4 @@
 
 <!-- There is no admin section yet	 -->
 <%= link_to 'Admin section', "http://control.#{Uniform.configuration.domain}", { :title => "Go to the admin section", 
-										  :class => 'admin' } if current_user.admin? %>
+										  :class => 'admin' } if current_user.is_admin? %>
