Links to Newfangled opens in a new window

--- a/app/views/shared/inc/_newfangled.html.erb
+++ b/app/views/shared/inc/_newfangled.html.erb
@@ -4,5 +4,5 @@
 		 -->
 		<div id="newfangled">
 			Website developed by 
-			<a href="http://newfangled.com.au" title="This is a Newfangled website">Newfangled</a>
+			<a href="http://newfangled.com.au" title="This is a Newfangled website" target="_blank">Newfangled</a>
 		</div>
